Correction z-index bootstrap date picker

--- a/webroot/css/opencomp.app.css
+++ b/webroot/css/opencomp.app.css
@@ -270,3 +270,5 @@ a.btn-success {
 i.red {
   color:red;
 }
+
+.datepicker{z-index:1151 !important;}
